# muzlib-desktop

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
deploy/linux/: muzlib.desktop
src/muzlib_desktop/: main.py
src/muzlib_desktop/qml/: NavigableTextArea.qml  main.qml
